Fix kdc issues and use embedded kafka

--- a/playbooks/roles/ambari-blueprint/templates/cluster_template.j2
+++ b/playbooks/roles/ambari-blueprint/templates/cluster_template.j2
@@ -43,5 +43,17 @@
     }{% if not loop.last %},{% endif %}
     {% endfor %}
 
+  ],
+  "configurations" : [
+    {
+      "kerberos-env" : {
+      "realm": "CLOUDERA.COM",
+      "kdc_type": "mit-kdc",
+      "kdc_hosts" : "vb0207.halxg.cloudera.com",
+      "admin_server_host" : "vb0207.halxg.cloudera.com",
+      "container_dn" : "",
+      "ldap_url" : ""
+      }
+    }
   ]
 }
