change KDC credential storage type to PERSISTED

--- a/playbooks/roles/ambari-blueprint/templates/cluster_template.j2
+++ b/playbooks/roles/ambari-blueprint/templates/cluster_template.j2
@@ -15,7 +15,7 @@
       "principal" : "{{ security_options.admin_principal }}@{{ security_options.realm | upper }}",
 {% endif %}
       "key" : "{{ security_options.admin_password }}",
-      "type" : "TEMPORARY"
+      "type" : "PERSISTED"
     }
   ],
   "security" : {
