--- a/playbooks/roles/manage-ambari/templates/ambari.repo.j2
+++ b/playbooks/roles/manage-ambari/templates/ambari.repo.j2
@@ -1,9 +1,9 @@
-#VERSION_NUMBER=7.1.4.0-25
-[ambaridc-7.1.4.0]
-#json.url = http://public-repo-1.hortonworks.com/HDP/hdp_urlinfo.json
-name=ambari Version - ambari-7.1.4.0
-baseurl=https://{{ username }}:{{ password }}@archive.cloudera.com/p/ambaridc/centos7/7.x/updates/7.1.4.0
+#VERSION_NUMBER=7.1.6.0-26
+[ambari-7.1.6.0-26]
+#json.url = http://s3.amazonaws.com/dev.hortonworks.com/HDP/hdpdev_urlinfo.json
+name=ambari Version - ambari-7.1.6.0-26
+baseurl=http://s3.amazonaws.com/dev.hortonworks.com/ambari/centos7/7.x/BUILDS/7.1.6.0-26
 gpgcheck=1
-gpgkey=https://{{ username }}:{{ password }}@archive.cloudera.com/p/ambaridc/centos7/7.x/updates/7.1.4.0/RPM-GPG-KEY/RPM-GPG-KEY-Jenkins
+gpgkey=http://s3.amazonaws.com/dev.hortonworks.com/ambari/centos7/7.x/BUILDS/7.1.6.0-26/RPM-GPG-KEY/RPM-GPG-KEY-Jenkins
 enabled=1
 priority=1
