--- a/playbooks/roles/ambari-blueprint/templates/cluster_template.j2
+++ b/playbooks/roles/ambari-blueprint/templates/cluster_template.j2
@@ -49,8 +49,8 @@
       "kerberos-env" : {
       "realm": "CLOUDERA.COM",
       "kdc_type": "mit-kdc",
-      "kdc_hosts" : "vc1515.halxg.cloudera.com",
-      "admin_server_host" : "vc1515.halxg.cloudera.com",
+      "kdc_hosts" : "vd1328.halxg.cloudera.com",
+      "admin_server_host" : "vd1328.halxg.cloudera.com",
       "container_dn" : "",
       "ldap_url" : ""
       }
